[package]
name = "fat-p2fa"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_primitives = { version = "3.0.1", default-features = false }
ink_metadata = { version = "3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.1", default-features = false }
ink_storage = { version = "3.0.1", default-features = false }
ink_lang = { version = "3.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.1.5", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sha-1 = "0.10.0"
hmac = "0.12.1"
data-encoding = "2.3.2"

[lib]
name = "fat_p2fa"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
